2002-11-14  John Levon  <levon@movementarian.org>

	* libopt++/popt_options.h:
	* libopt++/popt_options.cpp: place in popt
	namespace to avoid clash with getopt.h

	* libabi/abi_test.cpp:
	* libabi/op_import.cpp:
	* pp/op_merge.cpp:
	* pp/op_time_options.cpp:
	* pp/op_to_source_options.cpp:
	* pp/oprofpp_options.cpp:
	* pp/session.cpp: fix for above
 
	* libabi/abi.cpp:
	* libabi/abi.h: g++ 3.2 fixes

	* libabi/op_import.cpp: uninline extract

	* dae/Makefile.am:
	* daemon/Makefile.am: fix c++ link hack for -Werror
 
2002-11-13  Graydon Hoare  <graydon@redhat.com>

	( this changeset is mostly Dave Jones' work )

	* README:
	* TODO:
	* configure.in:
	* doc/oprofile.xml:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* utils/op_help.c:
	* module/compat.h:
	* module/compat24.h:
	* module/op_util.c:
	* module/x86/Makefile.in:
	* module/x86/apic_compat.h:
	* module/x86/arch.h:
	* module/x86/cpu_type.c:
	* module/x86/op_fixmap.c:
	* module/x86/op_nmi.c: minor additions for hammer support.

	* module/x86/op_apic.c:
	* module/x86/op_apic.h: major cleanup; add hammer support.
	
	* module/x86/hammer_entry.S:
	* module/x86/hammer_ia32entry.S:
	* module/x86/hammer_op_syscalls.c:
	* module/x86/hammer_oprofile_nmi.S: new hammer support files.

2002-11-14  John Levon  <levon@movementarian.org>

	* configure.in: hack around case where clean checkout
	  then ./configure --with-kernel-support
 
2002-11-12  Graydon Hoare  <graydon@redhat.com>

	* autogen.sh: support overriding autotool binary names.

2002-11-11  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in: honor --with-extra-libs

2002-11-11  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in: add -W -Wall and optionnaly -Werror to user space
	  compilation

2002-11-11  John Levon  <levon@movementarian.org>

	* dae/Makefile.am:
	* daemon/Makefile.am: don't dist dummy.cpp
 
2002-11-11  John Levon  <levon@movementarian.org>

	* dae/Makefile.am:
	* daemon/Makefile.am: hack to fix --enable-abi
 