@@ -1,5 +1,5 @@
 /**
- * @file opd_sample_files.c
+ * @file daemon/opd_sample_files.c
  * Management of sample files
  *
  * @remark Copyright 2002 OProfile authors
